examples/errors/parsing/if-empty-else.cn
main : () [impure] =
  if true then 1 else
